<resources>
    <string name="app_name">App Calculadora</string>
    <string name="buttonDigCero_Text">0</string>
    <string name="buttonDigUno_Text">1</string>
    <string name="buttonDigDos_Text">2</string>
    <string name="buttonDigTres_Text">3</string>
    <string name="buttonDigCuatro_Text">4</string>
    <string name="buttonDigCinco_Text">5</string>
    <string name="buttonDigSeis_Text">6</string>
    <string name="buttonDigSiete_Text">7</string>
    <string name="buttonDigOcho_Text">8</string>
    <string name="buttonDigNueve_Text">9</string>
    <string name="buttonDigPunto_Text">.</string>
    <string name="buttonDigIgual_Text">=</string>
    <string name="buttonDigParIzq_Text">(</string>
    <string name="buttonDigParDer_Text">)</string>
    <string name="buttonDigC_Text">C</string>
    <string name="buttonDigSign_Text">+/-</string>
    <string name="buttonDigPi_Text">π</string>
    <string name="buttonDigE_Text">e</string>
    <string name="buttonDigRad_Text">Rad</string>
    <string name="buttonDigDeg_Text">Deg</string>

    <string name="buttonOpDiv_Text">/</string>
    <string name="buttonOpMult_Text">*</string>
    <string name="buttonOpMenos_Text">-</string>
    <string name="buttonOpMas_Text">+</string>

    <string name="buttonOpRaiz_Text">sqrt</string>
    <string name="buttonOpPotencia_Text">^</string>
    <string name="buttonOpFac_Text">x!</string>
    <string name="buttonOpLogn_Text">ln</string>
    <string name="buttonOpLog10_Text">log10</string>
    <string name="buttonOpSen_Text">sen</string>
    <string name="buttonOpCos_Text">cos</string>
    <string name="buttonOpSec_Text">sec</string>
    <string name="buttonOpCsc_Text">csc</string>
    <string name="buttonOpTan_Text">tan</string>
    <string name="buttonOpCtg_Text">ctg</string>
    <string name="buttonOpMod_Text">%</string>

    <string name="textViewDisplay_Text">0.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
