<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BasicFunctions">

    <LinearLayout
        android:id="@+id/LinearLayoutBasicFunctions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LayoutFilaOp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDigC"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonAltFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigC_Text"
                android:textColor="@color/buttonAltTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigDSign"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonAltFondo"
                android:text="@string/buttonDigSign_Text"
                android:onClick="onClick"
                android:textColor="@color/buttonAltTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigModulo"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonAltFondo"
                android:onClick="onClick"
                android:text="@string/buttonOpMod_Text"
                android:textColor="@color/buttonAltTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigDiv"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:onClick="onClick"
                android:text="@string/buttonOpDiv_Text"
                android:textColor="@color/buttonOpTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutFilaDos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDigSiete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigSiete_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigOcho"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigOcho_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigNueve"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigNueve_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigMult"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:onClick="onClick"
                android:text="@string/buttonOpMult_Text"
                android:textColor="@color/buttonOpTexto"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutFilaTres"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDigSeis"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigSeis_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigCinco"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigCinco_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigCuatro"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigCuatro_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigMenos"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:onClick="onClick"
                android:text="@string/buttonOpMenos_Text"
                android:textColor="@color/buttonOpTexto"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutFilaCuatro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDigTres"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigTres_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigDos"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigDos_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigUno"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigUno_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigMas"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:onClick="onClick"
                android:text="@string/buttonOpMas_Text"
                android:textColor="@color/buttonOpTexto"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutFilaCinco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDigCero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigCero_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigPunto"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonDigFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigPunto_Text"
                android:textColor="@color/buttonDigTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonDigIgual"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:onClick="onClick"
                android:text="@string/buttonDigIgual_Text"
                android:textColor="@color/buttonOpTexto"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>