<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScientificFunctions">

    <LinearLayout
        android:id="@+id/LinearLayoutH"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LayoutFilaOp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonFunLog10"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonAltFondo"
                android:text="@string/buttonOpLog10_Text"
                android:textAllCaps="false"
                android:textColor="@color/buttonAltTexto"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonParA"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonAltFondo"
                android:text="@string/buttonDigParIzq_Text"
                android:textColor="@color/buttonAltTexto"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonParC"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonAltFondo"
                android:text="@string/buttonDigParDer_Text"
                android:textColor="@color/buttonAltTexto"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutFilaDos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOpFact"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonOpFac_Text"
                android:textAllCaps="false"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonOpRaiz"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonOpRaiz_Text"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/buttonOpPot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonOpPotencia_Text"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutFilaTres"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonOpLn"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonOpLogn_Text"
                android:textAllCaps="false"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonOpSen"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonOpSen_Text"
                android:textAllCaps="false"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonOpCos"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonOpCos_Text"
                android:textAllCaps="false"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutFilaCuatro"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDigPi"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonDigPi_Text"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonOpTan"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonOpTan_Text"
                android:textAllCaps="false"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonOpCsc"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonOpCsc_Text"
                android:textAllCaps="false"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LayoutFilaCinco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonDigE"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonDigE_Text"
                android:textAllCaps="false"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonOpSec"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonOpSec_Text"
                android:textAllCaps="false"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonOpCtg"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/buttonOpFondo"
                android:text="@string/buttonOpCtg_Text"
                android:textAllCaps="false"
                android:textColor="@color/buttonOpTexto"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>